welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: not a legal formal parameter
	if (y == 5 & x=>3){
                   ^