welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var x=0
var y=0
do{
	avance()
	y=y+1
	if (estSurBiscuit()==true){
		x=x+1
	}
	if (y == 5 & x=>3){
		gauche()
		x=0
		y=0
	}
	if (y == 5 & x<2){
		gauche()
		x=0
		y=0
	}
	
}while(sortieTrouvee()!=true)
